<resources>
    <string name="app_name">Punekar</string>
    <string name="create_account">Create Account</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log-in</string>
    <string name="show">Show</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_email">Sign up email</string>
    <string name="sign_up_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_no">Contact</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_show">Show</string>
    <string name="profile">Profile</string>
    <string name="recipient_test_message">Recipient Test Message</string>
    <string name="date">Date</string>
    <string name="sender_text_message">Sender Text Message</string>
    <string name="type_a_message">Type a message</string>
    <string name="message">Message</string>
    <string name="show_details">Show Details</string>
</resources>
