<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_scrollview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="30dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="161dp"
                android:layout_marginLeft="161dp"
                android:layout_marginEnd="124dp"
                android:layout_marginRight="124dp"
                android:src="@drawable/userphoto"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/signup_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"
                android:background="@drawable/pallet_background"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/pallet_background"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_name"
                app:layout_constraintVertical_bias="0.026" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_email"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/pallet_background"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_email"
                app:layout_constraintVertical_bias="0.038" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/pallet_background"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_password"
                app:layout_constraintVertical_bias="0.049" />

            <EditText
                android:id="@+id/signup_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/pallet_background"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:hint="@string/contact_no"
                android:inputType="phone"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password"
                app:layout_constraintVertical_bias="0.087" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_contact"
                app:layout_constraintVertical_bias="0.164">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_styles"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/sign_up_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_up_show"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/signup_password"
                app:layout_constraintEnd_toEndOf="@+id/signup_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/signup_password"
                app:layout_constraintTop_toTopOf="@+id/signup_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>